# tutorfin

./: .cursorindexingignore  .gitignore  .prettierrc  CHANGELOG.md  README.md  design.md  index.html  jupytext.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  vite.config.ts  vitest.config.ts
.artifacts/: README.md
.cursor/rules/: 001-base.mdc  002-components.mdc  003-systems.mdc  004-actions.mdc  005-traits.mdc  006-utils.mdc  007-tailwind.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/agents/: test-writer.agent.md
.github/hooks/: block-tmp-commit.json  block-tmp-commit.sh
.github/instructions/: 002-components.instructions.md  003-systems.instructions.md  004-actions.instructions.md  005-traits.instructions.md  006-utils.instructions.md  007-tailwind.instructions.md  coverage-exclude.instructions.md  playwright-spec.instructions.md
.github/prompts/: e2e-bootstrap.prompt.md
.github/workflows/: ci.yml
.planr/: project-structure.md
.planr/core/: currentPointer.json
curriculum/: README.md
curriculum/indexes/: common-core.md  khan-academy.md  topics.md
docs/: ledgertext-recommendation.md
notebooks/: README.md  template-lesson.md
scripts/: migrate_cursor2github.py
src/: actions.ts  app.tsx  gameloop.ts  main.tsx  startup.tsx  styles.css  world.ts
src/components/: camera-renderer.tsx  (+4 more)
tests/: actions.test.ts  app.test.tsx  gameloop.test.tsx  main.test.tsx  startup.test.tsx  world.test.ts
web/: README.md  next.config.mjs  package.json  tsconfig.json  wrangler.toml
(+81 files in other folders)
